# cln.rpc

./: .gitignore  Makefile  README.org  build.clj  deps.edn  pyproject.toml
pytest/: deps.edn  notify.py  test_cln_client_clj.py  test_clnrpc_clj.py
pytest/src/: call.clj  getinfo.clj  rpc.clj
src/: cln_client_clj.clj  clnrpc_clj.clj  clnrpc_utils.clj  rpcmethods.clj
src/tonyaldon/cln/: rpc.clj
src/tonyaldon/cln/rpc/: core.clj  rpcmethods.clj
test/: cln_client_clj_test.clj  clnrpc_clj_test.clj  gen_rpcmethods_test.clj
test/schemas/: lightning-decode.json  lightning-getinfo.json  lightning-invoice.json  lightning-newaddr.json
test/tonyaldon/cln/: rpc_test.clj
test/tonyaldon/cln/rpc/: core_test.clj
tools/: gen_rpcmethods.clj
