[tool.poetry]
name = "clnrpc-clj"
version = "0.1"
description = "Core Lightning JSON-RPC client for Clojure."
authors = ["Tony Aldon <tony@tonyaldon.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pyln-testing = "^23.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
