[tool.poetry]
name = "clnrpc-clj"
version = "24.02"
description = "Core Lightning JSON-RPC client for Clojure."
authors = ["Tony Aldon <tony@tonyaldon.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pyln-testing = "^24.02"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
